--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -9,6 +9,14 @@
     tools:context="com.example.anojarulanantham.minkboxfinal.OneFragment">
 
     <ImageView
+        android:id="@+id/gallery"
+        android:layout_below="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/pushImage"
+        app:srcCompat="@drawable/gallery64" />
+
+    <ImageView
         android:layout_width="208dp"
         android:layout_height="350dp"
         android:src="@drawable/harder"
@@ -19,32 +27,22 @@
         android:layout_marginTop="25dp"
         android:layout_marginBottom="10dp" />
 
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
-        android:text="Get Image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/getImage"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/imageView"
-        android:layout_marginRight="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="13dp" />
-
     <Button
         android:text="Push Image"
         android:layout_width="104dp"
         android:layout_height="wrap_content"
         android:id="@+id/pushImage"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/getImage"
-        android:layout_marginBottom="11dp" />
+        android:layout_below="@+id/camera"
+        android:layout_marginTop="5dp" />
 
-    <Button
+    <ImageView
         android:id="@+id/camera"
-        android:layout_width="104dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Camera"
-        android:layout_marginTop="200dp" />
+        android:layout_toLeftOf="@+id/pushImage"
+        android:layout_below="@id/imageView"
+        app:srcCompat="@drawable/camera64" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
