--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -6,53 +6,76 @@
     tools:context="com.example.anojarulanantham.minkboxfinal.ThreeFragment">
 
 
-    <ToggleButton
-        android:id="@+id/togglebutton"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/mySwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textOn="On"
-        android:textOff="Off" />
+        android:layout_alignParentRight="true"
+        android:checked="false"
+        android:layout_marginTop="15dp"
+        android:theme="@style/SCBSwitch" />
+
+    <TextView android:id="@+id/switchText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="15dp"
+        android:textSize="16sp"
+        android:layout_alignParentLeft="true"
+        android:text="Low Battery Notification" />
 
     <TextView android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@id/switchText"
         android:text="Name" />
 
     <EditText
         android:id="@+id/nameentry"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:layout_below="@id/name"
-        android:inputType="textPersonName"
-        android:lines="1"
-        android:background="@android:drawable/editbox_background"/>
+        android:hint="Enter your friends name"
+        android:textSize="15sp"
+        android:layout_marginLeft="5dp"
+        android:maxLines="1"/>
 
     <TextView android:id="@+id/phonenumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_below="@id/nameentry"
         android:text="Contact Info" />
 
     <EditText
         android:id="@+id/numberentry"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/phonenumber"
+        android:layout_marginLeft="5dp"
         android:inputType="phone"
         android:lines="1"
-        android:maxLength="11"
-        android:background="@android:drawable/editbox_background"/>
+        android:maxLength="12" />
 
     <TextView android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_below="@id/numberentry"
         android:text="Message" />
 
     <EditText
         android:id="@+id/messageentry"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/message"
-        android:background="@android:drawable/editbox_background"/>
+        android:textSize="15sp"
+        android:layout_marginLeft="5dp"
+        android:hint="Enter your message here."/>
+
 </RelativeLayout>
