--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -41,6 +41,13 @@
             android:layout_height="fill_parent"
             android:contentDescription="@string/save"
             android:src="@drawable/save" />
+
+        <ImageButton
+            android:id="@+id/send_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/send"
+            android:src="@android:drawable/stat_sys_upload" />
     </LinearLayout>
 
     <com.example.anojarulanantham.minkboxfinal.DrawingView
