--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -9,40 +9,70 @@
     tools:context="com.example.anojarulanantham.minkboxfinal.OneFragment">
 
     <ImageView
-        android:id="@+id/gallery"
-        android:layout_below="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/pushImage"
-        app:srcCompat="@drawable/gallery64" />
-
-    <ImageView
         android:layout_width="208dp"
-        android:layout_height="350dp"
+        android:layout_height="375dp"
         android:src="@drawable/harder"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/imageView"
         android:scaleType="fitXY"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:text="Send Image"
-        android:layout_width="104dp"
+        android:text="Upload Image"
         android:layout_height="wrap_content"
         android:id="@+id/pushImage"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/camera"
-        android:layout_marginTop="5dp" />
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="120dp"
+        android:layout_width="350dp"
+        android:theme="@style/PrimaryButton" />
 
     <ImageView
         android:id="@+id/camera"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/camera96orange"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:layout_below="@+id/imageView"
+        android:layout_alignLeft="@+id/pushImage"
+        android:layout_alignStart="@+id/pushImage"
+        android:layout_marginLeft="97.5dp"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="30dp" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/pushImage"
-        android:layout_below="@id/imageView"
-        app:srcCompat="@drawable/camera64" />
+        android:layout_above="@id/camera"
+        android:layout_marginLeft="69dp"
+        android:layout_marginBottom="-25dp"
+        android:text="Camera"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/camera"
+        android:layout_marginLeft="247dp"
+        android:layout_marginBottom="-25dp"
+        android:text="Gallery"/>
+
+    <ImageView
+        android:id="@+id/gallery"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/photos96orange"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:layout_marginRight="57.5dp"
+        android:layout_alignTop="@+id/camera"
+        android:layout_alignRight="@+id/pushImage"
+        android:layout_alignEnd="@+id/pushImage" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
