--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
         android:checked="false"
         android:layout_marginTop="15dp"
         android:theme="@style/SCBSwitch" />
@@ -18,7 +19,7 @@
     <TextView android:id="@+id/switchText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="15dp"
         android:textSize="16sp"
         android:layout_alignParentLeft="true"
@@ -28,17 +29,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="35dp"
         android:layout_below="@id/switchText"
         android:text="Name" />
 
     <EditText
         android:id="@+id/nameentry"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:inputType="text"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/name"
-        android:hint="Enter your friends name"
+        android:hint="Enter your name"
         android:textSize="15sp"
         android:layout_marginLeft="5dp"
         android:maxLines="1"/>
@@ -47,35 +49,39 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="35dp"
         android:layout_below="@id/nameentry"
         android:text="Contact Info" />
 
     <EditText
         android:id="@+id/numberentry"
-        android:layout_width="150dp"
+        android:layout_width="300dp"
+        android:hint="Enter your phone number"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/phonenumber"
         android:layout_marginLeft="5dp"
         android:inputType="phone"
         android:lines="1"
+        android:textSize="15sp"
         android:maxLength="12" />
 
     <TextView android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="35dp"
         android:layout_below="@id/numberentry"
         android:text="Message" />
 
     <EditText
         android:id="@+id/messageentry"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
+        android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:layout_below="@id/message"
         android:textSize="15sp"
         android:layout_marginLeft="5dp"
-        android:hint="Enter your message here."/>
+        android:hint="Enter your message"/>
 
 </RelativeLayout>
