--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#125688</color>
-    <color name="colorPrimaryDark">#125688</color>
+    <color name="colorPrimary">#172A3A</color>
+    <color name="colorPrimaryDark">#132330</color>
     <color name="textColorPrimary">#125688</color>
     <color name="windowBackground">#125688</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#BF4E30</color>
     <color name="disable_foreground_grey">#42221f1f</color>
     <color name="disable_thumb_grey">#1c000000</color>
     <color name="enable_thumb_blue">#125688</color>
