--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -84,5 +84,14 @@
         android:layout_marginLeft="5dp"
         android:hint="Enter your message"/>
 
+    <Button
+        android:text="Screenshot and Upload Image"
+        android:layout_height="wrap_content"
+        android:id="@+id/saveData"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/messageentry"
+        android:layout_marginTop="120dp"
+        android:layout_width="350dp"
+        android:theme="@style/PrimaryButton" />
 
 </RelativeLayout>
